ingress/ingress-nginx.yaml
# Nginx Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-api-tracing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.the-auction-games.com
    - tracing.the-auction-games.com
    secretName: tls-secret
  rules:
  # Ingress for Sidecar API
  - host: api.the-auction-games.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-dapr
            port:
              number: 80
  # Ingress for Zipkin
  - host: tracing.the-auction-games.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin-service
            port:
              number: 80
---
# Nginx Ingress to Nginx Rule (Ingress Reverse Proxy for Web Application)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-to-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - the-auction-games.com
    secretName: tls-secret
  rules:
  # Ingress for Web Application (Load balance on service)
  - host: the-auction-games.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-service
            port:
              number: 443
